Fix header item alignment

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -911,6 +911,10 @@ ul.menu .menu-item {
     -webkit-align-items: flex-start;
     -moz-align-items: flex-start;
     align-items: flex-start;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
+    -moz-justify-content: space-between;
     justify-content: space-between; }
   .no-flexbox .header-inner .header-title, .no-flexbox
   .header-inner .menu-main, .no-flexbox
@@ -1064,7 +1068,6 @@ ul.menu .menu-item {
     top: 0;
     right: 22px;
     z-index: 5;
-    display: none;
     margin-right: 20px;
     padding-right: 22px;
     width: auto;
@@ -1136,7 +1139,7 @@ ul.menu {
       content: '' !important; }
 
 .menu-main {
-  display: inline-block;
+  display: inline;
   padding: 7px 0;
   max-width: 75%; }
   @media screen and (max-width: 752px) {
@@ -1156,7 +1159,7 @@ ul.menu {
       margin: 0 0 60px;
       min-width: 100%; } }
   .menu-main .menu {
-    float: right;
+    display: inline;
     padding: 0;
     list-style: none; }
     .menu-main .menu .menu-item,
@@ -1176,8 +1179,6 @@ ul.menu {
         color: #cc0000; }
       .menu-main .menu .menu-link.active {
         font-weight: 700; }
-  .menu-main .menu-lang {
-    display: none; }
 
 #sidebar .menu {
   text-align: left; }
@@ -1219,7 +1220,7 @@ ul.menu {
     padding-left: 15px; }
 
 .menu-lang {
-  display: inline-block;
+  display: inline;
   padding: 6px 0;
   width: auto; }
   .menu-lang .menu {
@@ -1230,7 +1231,8 @@ ul.menu {
     float: right;
     margin-top: 1px;
     height: 24px;
-    border-radius: 20px; }
+    border-radius: 20px;
+    margin-left: 20px; }
     .menu-lang .langmenu .langmenu-content {
       padding: 4px 22px 0 10px;
       height: 14px;
